fixed footer on safari

--- a/src/app/typerace/typerace.component.scss
+++ b/src/app/typerace/typerace.component.scss
@@ -156,6 +156,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  left: 0;
 
   // animation: appear-up 0.5s ease;
 }
